# LaueMatching

./: .gitignore  100MilOrients.bin.meta.json  CMake Guide for Developers.md  CMakeLists.txt  CONTRIBUTING.md  C_CUDA_HARDENING.md  Dockerfile  GenerateHKLs.py  GenerateSimulation.py  INSTALL.md  ImageCleanup.py  LaueMatchingGPU.cu  LaueMatchingImageCleanup.py  Makefile  README.md  REFACTOR_PLAN.md  RunImage.py  build.sh  docker-compose.yml  getPackages.sh  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
cmake/: DownloadOrientFile.cmake  FindNLOPT.cmake
docs/: indexfile-format.md  provenance.md
laue_index/: README.md  __init__.py  cli.py  config_schema.py  filtering.py  geometry.py  indexer.py  output.py  postprocess.py  preprocess.py  records.py  thresholds.py
laue_matching_lib/: CMakeLists.txt  cmakeinside.txt  main.c  main_gpu.c
laue_matching_lib/include/: laue_matching.h  laue_matching_gpu.h
laue_matching_lib/src/: common.h  laue_matching.c  laue_matching_gpu.cu
laue_matching_lib/src/core/: crystallography.c  crystallography.h  diffraction.c  diffraction.h  geometry.c  geometry.h  optimization.c  optimization.h
laue_matching_lib/src/io/: file_io.c  file_io.h
scripts/: GenerateHKLs.py  GenerateOrientations.py  GenerateSimulation.py  README.md  RunImage.py  _version.py  annotate_orientation_db.py  laue_config.py  laue_image_server.py  laue_indexfile.py  laue_orchestrator.py  laue_postprocess.py  laue_provenance.py  laue_simulation.py  laue_stream_utils.py  laue_visualization.py
scripts/tests/: test_config_flags.py  test_generate_orientations.py  test_indexfile.py  test_indexfile_golden.py  test_postprocess_integration.py  test_provenance.py
scripts/tests/golden/: ni_sample.indexing.txt
simulation/: README.md  fourOrientations.csv  params_sim.txt  simulationOrientationMatrices.csv
src/: LaueMatchingCPU.c  LaueMatchingGPU.cu  LaueMatchingGPUStream.cu  LaueMatchingHeaders.h  LaueMatchingSharedFunctions.c
tests/: _golden.py  conftest.py  test_char_config.py  test_char_e2e.py  test_char_filtering.py  test_char_geometry.py  test_char_parse.py  test_char_preprocess.py  test_char_threshold.py  test_cli.py  test_indexer.py  test_postprocess.py  test_postprocess_stream.py  test_records.py  test_robustness_fixes.py  test_runimage_orchestration.py
tests/fixtures/: frame101_filtertest.npz  params_NiIndent.txt  sample.solutions.txt  sample.spots.txt
tests/golden/: config_laueconfig_todict.json  config_lsu_dict.json  config_written_text.json  disorientation.json  e2e_runimage_1040.json  filter_legacy.json  filter_robust.json  is_csl_related.json  parse_solutions.json  preprocess_real_frame.json  read_solutions.json  read_spots.json  stream_process_single_image.json  threshold_adaptive.json  threshold_fixed.json  threshold_otsu.json  threshold_percentile.json  unique_spots.json
